# hengband

./: .clang-format  .cvsignore  .editorconfig  .gitignore  .gitmodules  .prettierrc.yaml  Build-Windows-Release-Package.ps1  Changelogs  Makefile.am  Makefile.in  THIRD-PARTY-NOTICES.txt  acconfig.h  acinclude.m4  autopick.txt  autopick_eng.txt  bootstrap  configure  configure.ac  configure.in  hengband-en.spec  hengband.spec  readme-eng.md  readme.md  readme.txt  readme_angband  readme_eng.txt
lib/edit/: ArtifactDefinitions.jsonc  ArtifactDefinitions.txt  BaseItemDefinitions.jsonc  BaseitemDefinitions.jsonc  BaseitemDefinitions.txt  ClassMagicDefinitions.jsonc  ClassMagicDefinitions.txt  EgoDefinitions.txt  Makefile.am  Makefile.in  MonraceDefinitions.jsonc  MonsterMessages.jsonc  MonsterRaceDefinitions.txt  QuestDefinitionList.txt  SpellDefinitions.jsonc  TerrainDefinitions.txt  TownDefinitionList.txt  TownPreferences.txt  VaultDefinitions.txt  WildernessDefinition.txt  a_info.txt  a_info_j.txt  d_info.txt  d_info_j.txt  e_info.txt  e_info_j.txt  f_info.txt  f_info_j.txt  k_info.txt  k_info_j.txt  m_info.txt  m_info_j.txt  misc.txt  misc_j.txt  q0000001.txt  q0000001_j.txt  q0000002.txt  q0000002_j.txt  q0000003.txt  q0000003_j.txt  (+94 more)
lib/file/: Makefile.am  Makefile.in  a_cursed.txt  a_cursed_j.txt  a_high.txt  a_high_j.txt  a_low.txt  a_low_j.txt  a_med.txt  a_med_j.txt  aname_j.txt  book-0_jp.txt  chainswd.txt  chainswd_j.txt  crime.txt  dead.txt  dead_j.txt  death.txt  death_j.txt  elvish.txt  elvish_j.txt  error.txt  error_j.txt  mondeath.txt  mondeath_j.txt  monfear.txt  monfear_j.txt  monfrien.txt  monfrien_j.txt  monspeak.txt  monspeak_j.txt  news.txt  news_j.txt  rumors.txt  rumors_j.txt  seppuku.txt  seppuku_j.txt  silly.txt  silly_j.txt  sname.txt  (+12 more)
lib/help/: Makefile.am  Makefile.in  arena.txt  attack.hlp  attack.txt  birth.hlp  birth.txt  bldg.txt  charattr.hlp  charattr.txt  command.hlp  command.txt  commdesc.hlp  commdesc.txt  defend.hlp  defend.txt  dungeon.hlp  dungeon.txt  editor.txt  faq.txt  gambling.txt  general.hlp  general.txt  help.hlp  helpinfo.txt  j_general.txt  j_item1.txt  j_item2.txt  j_name.txt  j_trans.txt  japanese.txt  jattack.hlp  jattack.txt  jbirth.hlp  jbirth.txt  jbldg.txt  jcharattr.hlp  jcharattr.txt  jcommand.hlp  jcommand.txt  (+50 more)
lib/pref/: Makefile.am  Makefile.in  colors.prf  font-ami.prf  font-dos.prf  font-ibm.prf  font-mac.prf  font-mon.prf  font-win.prf  font-x11.prf  font-xxx.prf  font.prf  graf-ami.prf  graf-dos.prf  graf-gcu.prf  graf-ibm.prf  graf-mac.prf  graf-ne2.prf  graf-new.prf  graf-win.prf  graf-x11.prf  graf-xxx.prf  graf.prf  pickpref.prf  picktype.prf  pref-acn.prf  pref-ami.prf  pref-gcu.prf  pref-key.prf  pref-mac.prf  pref-opt.prf  pref-win.prf  pref-x11.prf  pref.prf  proxy.prf  spell-xx.prf  user-win.prf  user.prf  xtra-gcu.prf  xtra-new.prf  (+1 more)
src/: .cvsignore  Makefile.am  Makefile.in  ang_eng.rc  ang_jp.rc  angband.h  angband.rc  artifact.c  artifact.h  autoconf.h.in  autopick.c  autopick.h  avatar.c  avatar.h  birth.c  birth.h  bldg.c  bldg.h  cave.c  character-dump.c  character-dump.h  chest.c  chest.h  chuukei.c  chuukei.h  cmd-activate.c  cmd-activate.h  cmd-basic.c  cmd-basic.h  cmd-dump.c  cmd-dump.h  cmd-eat.c  cmd-eat.h  cmd-gameoption.c  cmd-hissatsu.c  cmd-hissatsu.h  cmd-item.c  cmd-item.h  cmd-magiceat.c  cmd-magiceat.h  (+315 more)
src/action/: action-limited.c  action-limited.cpp  action-limited.h  activation-execution.c  activation-execution.cpp  activation-execution.h  movement-execution.c  movement-execution.cpp  movement-execution.h  mutation-execution.c  mutation-execution.cpp  mutation-execution.h  open-close-execution.c  open-close-execution.cpp  open-close-execution.h  open-util.c  open-util.cpp  open-util.h  racial-execution.c  racial-execution.cpp  racial-execution.h  run-execution.c  run-execution.cpp  run-execution.h  throw-util.c  throw-util.cpp  throw-util.h  travel-execution.c  travel-execution.cpp  travel-execution.h  tunnel-execution.c  tunnel-execution.cpp  tunnel-execution.h  weapon-shield.c  weapon-shield.cpp  weapon-shield.h
src/art-definition/: art-accessory-types.h  art-armor-types.h  art-bow-types.h  art-protector-types.h  art-sword-types.h  art-weapon-types.h  random-art-effects.h
src/artifact/: artifact-info.c  artifact-info.cpp  artifact-info.h  fixed-art-generator.c  fixed-art-generator.cpp  fixed-art-generator.h  fixed-art-types.h  random-art-activation.c  random-art-activation.cpp  random-art-activation.h  random-art-bias-types.h  random-art-characteristics.c  random-art-characteristics.cpp  random-art-characteristics.h  random-art-effects.h  random-art-generator.c  random-art-generator.cpp  random-art-generator.h  random-art-misc.c  random-art-misc.cpp  random-art-misc.h  random-art-pval-investor.c  random-art-pval-investor.cpp  random-art-pval-investor.h  random-art-resistance.c  random-art-resistance.cpp  random-art-resistance.h  random-art-slay.c  random-art-slay.cpp  random-art-slay.h
src/autopick/: autopick-adder.c  autopick-adder.h  autopick-command-menu.c  autopick-command-menu.cpp  autopick-command-menu.h  autopick-commands-table.h  autopick-describer.c  autopick-describer.cpp  autopick-describer.h  autopick-destroyer.c  autopick-destroyer.cpp  autopick-destroyer.h  autopick-dirty-flags.h  autopick-drawer.c  autopick-drawer.cpp  autopick-drawer.h  autopick-editor-command.c  autopick-editor-command.cpp  autopick-editor-command.h  autopick-editor-table.h  autopick-editor-util.c  autopick-editor-util.cpp  autopick-editor-util.h  autopick-entry.c  autopick-entry.cpp  autopick-entry.h  autopick-finder.c  autopick-finder.cpp  autopick-finder.h  autopick-flags-table.h  autopick-initializer.c  autopick-initializer.cpp  autopick-initializer.h  autopick-inserter-killer.c  autopick-inserter-killer.cpp  autopick-inserter-killer.h  autopick-inserter.c  autopick-inserter.h  autopick-key-flag-process.h  autopick-key-table.h  (+25 more)
src/avatar/: avatar-changer.cpp  avatar-changer.h  avatar.cpp  avatar.h
src/birth/: auto-roller.c  auto-roller.cpp  auto-roller.h  birth-body-spec.c  birth.c  (+51 more)
(+3317 files in other folders)
